@@ -11,6 +11,17 @@ REVISION HISTORY
 ================
 
 ------------------
+2014-12-26
+Add API method getBufSize and edit methods readBinary and writeBinary
+コンパイルオプションで与えたバッファサイズを取得するAPI関数getBufSizeを定義した。
+また、readBinary、writeBinaryを編集した。
+
+------------------
+2014-11-09
+Add buffer tuning prototype
+バッファサイズチューニングに対応してreadBinary、writeBinaryを編集した。
+
+------------------
 2014-11-04
 Add check for reading coordinate file
 不等間隔格子で座標ファイルを読み込む際、座標ファイルが読み込めているか
